--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-paramiko==3.4.0
-requests~=2.31.0
-toml~=0.10.2
+paramiko>=2.11.0
+requests>=2.28.0
+toml>=0.10.2
 
-pandas~=2.2.1
-cryptography~=42.0.5
+# test dependencies
+pytest>=7.0.0
+docker>=5.0.0
+pandas>=1.4.0
